fixed photos and alignments

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
 }
 .buttonContainer{
   display: flex;
-  justify-content:center;
+  justify-content: center;
 } 
 .petContainer{
   display: flex;
@@ -15,16 +15,20 @@ h5{
   color: #a1a1a1;
   padding: 20px;
 }
-pets.imageUrl {
+.card-img-top {
+   border: 1px solid lightgrey;
+   background: white;
    padding:0.5em;
-   border: solid white 2px;
-   border-radius: 0.5em;
-   /* margin:5px; */
+   margin: auto;
+   border-radius: 5%;
+   height: 200px;
+   width: 80%;
 }
 .card{
   margin:1.5em;
   width: 300px;
 }
+
 .btn-primary{
   margin: 1.5em;
   color: #ffffff;
@@ -38,6 +42,9 @@ pets.imageUrl {
 }
 #dino-btn{
   background-color:#f0ad4e;
+}
+#unfilter-btn{
+  background-color:firebrick;
 }
 .card-footer{
   align-items: flex-end;
